# CMakeLists.txt : CMake project for test-project, include source and define
# project specific logic here.
#
cmake_minimum_required(VERSION 3.8)

project("test-project")

# Add source to this project's executable.
add_executable(test-project "test-project.c" "test-project.h")

# TODO: Add tests and install targets if needed.
